# niece_edu

./: .gitignore  README.md  hello.py  pyproject.toml  ~$学校选择.xlsx
data/: 2025学校名单.xlsx  2025招生计划字段提取整理版.xlsx  2025招生计划提取-修正.xlsx  2025招生计划提取.xlsx  base641.txt  base642.txt  edu.html  output.xlsx  school_list.csv  tencent.xlsx  tencent1.xlsx  title.xlsx  单招学校名称.xlsx  招生名单.xlsx  特殊情况.xlsx
data/2025/: 塔里木职业技术学院.xlsx  娄底幼儿师范高等专科学校.xlsx  娄底职业技术学院.xlsx  岳阳现代服务职业学院.xlsx  岳阳职业技术学院.xlsx  常德科技职业技术学院.xlsx  常德职业技术学院.xlsx  怀化工商职业技术学院.xlsx  怀化职业技术学院.xlsx  永州师范高等专科学校.xlsx  湖南三一工业职业技术学院.xlsx  湖南中医药高等专科学校.xlsx  湖南九嶷职业技术学院.xlsx  湖南交通职业技术学院.xlsx  湖南信息职业技术学院.xlsx  湖南劳动人事职业学院.xlsx  湖南化工职业技术学院.xlsx  湖南司法警官职业学院.xlsx  湖南吉利汽车职业技术学院.xlsx  湖南商务职业技术学院.xlsx  湖南国防工业职业技术学院.xlsx  湖南城建职业技术学院.xlsx  湖南外国语职业学院.xlsx  湖南外贸职业学院.xlsx  湖南安全技术职业学院.xlsx  湖南工商职业学院.xlsx  湖南工艺美术职业学院.xlsx  湖南幼儿师范高等专科学校.xlsx  湖南有色金属职业技术学院.xlsx  湖南机电职业技术学院.xlsx  湖南民族职业学院.xlsx  湖南汽车工程职业大学.xlsx  湖南环境生物职业技术学院.xlsx  湖南生物机电职业技术学院.xlsx  湖南电子科技职业学院.xlsx  湖南电气职业技术学院.xlsx  湖南石油化工职业技术学院.xlsx  湖南网络工程职业学院.xlsx  湖南艺术职业学院.xlsx  湖南财经工业职业技术学院.xlsx  (+32 more)
data/doc/: 塔里木职业技术学院.docx  娄底幼儿师范高等专科学校.docx  娄底职业技术学院.docx  岳阳现代服务职业学院.docx  岳阳职业技术学院.docx  常德科技职业技术学院.docx  常德职业技术学院.docx  张家界航空工业职业技术学院.doc  怀化工商职业技术学院.docx  怀化师范高等专科学校.doc  (+79 more)
src/: compare_file.py  doc_to_docx.py  doc_to_excel.py  doc_to_xlsx.py  get_doc.py  get_img.py  get_page.py  get_school_name.py  get_school_plan.py  get_school_plan_text.py  get_school_plan_text_mui.py  get_xlsx_title.py  img_to_base64  img_to_base64.py  img_to_xlsx.py  pre_xlsx.py  tencent_sdk.py  test.py  to_one_file.py
(+271 files in other folders)
